terraform/instance.tf
resource "aws_instance" "nginx" {
  ami                    = "ami-03f284fcd0a506f14"
  instance_type          = "t2.micro"
  subnet_id              = "${aws_subnet.sub.id}"
  vpc_security_group_ids = ["${aws_security_group.external.id}"]
}

resource "aws_eip" "nginx_eip" {
  instance = "${aws_instance.nginx.id}"
  vpc      = true
}

resource "aws_eip_association" "nginx_eip_assoc" {
  instance_id   = "${aws_instance.nginx.id}"
  allocation_id = "${aws_eip.nginx_eip.id}"
}
